--- a/techtrends/Dockerfile
+++ b/techtrends/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 ## Step 2:
 # Copy source code to working directory
 COPY . /app
-COPY ./schema.sql /app
+COPY ./techtrends/schema.sql /app
 ## Step 3:
 #RUN pip install -i https://pypi.org/simple flask
 RUN pip install -r requirements.txt
