--- a/techtrends/Dockerfile
+++ b/techtrends/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8
 
 # set a key-value label for the Docker image
-LABEL maintainer="nimd1"
+LABEL maintainer="modani130484"
 
 ## Step 1:
 # Create a working directory
